Fixed spacing on home page media query

--- a/css/index.css
+++ b/css/index.css
@@ -62,7 +62,7 @@ nav a, li a {
     color: #000000;
     border-radius: 100px;
     text-align: left;
-    font-size: 1.75em;
+    font-size: 1.5em;
     padding: 40px;
     margin: 20px;
 }
@@ -86,7 +86,7 @@ img {
 }
 .work-grid p {
     font-size: 1.5em;
-    padding: 10px;
+    margin: 10px;
 }
 
 
@@ -95,13 +95,14 @@ img {
 }
 .education-grid > .education-item, .education-grid > .education-title {
     color: #000000;
-    margin : 5px 25px;
+    margin : 0px 25px;
     padding: 10px;
     text-align: left;
 }
 .education-grid p {
     font-size: 1.5em;
     padding: 10px;
+    margin: 0px;
 }
 
 
